<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAnalizar">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="200dp"
                            android:layout_height="300dp"
                            android:layout_margin="16dp"
                            android:padding="16dp"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:id="@+id/textViewResultados"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            />
                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/boton_analizar_objeto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icono_analizar"
                    android:text="@string/menu_analizar_identificarObjeto"
                    android:backgroundTint="@color/colorButtons"
                    android:layout_marginRight="@dimen/boton_marginHorizontal"
                    android:onClick="handlerBotonAnalizarObjeto"/>
                <Button
                    android:id="@+id/boton_analizar_texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icono_analizar_texto"
                    android:text="@string/menu_analizar_identificarTexto"
                    android:backgroundTint="@color/colorButtons"
                    android:layout_marginRight="@dimen/boton_marginHorizontal"
                    android:onClick="handlerBotonAnalizarTexto"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/boton_analizar_codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icono_analizar_codigo_barras"
                    android:text="@string/menu_analizar_identificarCodigoBarra"
                    android:backgroundTint="@color/colorButtons"
                    android:layout_marginRight="@dimen/boton_marginHorizontal"
                    android:onClick="handlerBotonAnalizarCodigo"/>
                <Button
                    android:id="@+id/boton_analizar_cara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/icono_analizar_punto_referencia"
                    android:text="@string/menu_analizar_identificarPuntoReferencia"
                    android:backgroundTint="@color/colorButtons"
                    android:layout_marginRight="@dimen/boton_marginHorizontal"
                    android:onClick="handlerBotonAnalizarCara"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>